<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/et_register_username"
        android:hint="@string/ac_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_register_password"
        android:inputType="textPassword"
        android:hint="@string/ac_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_register_email"
        android:inputType="textEmailAddress"
        android:hint="@string/ac_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>